--- a/sections/conclusioni.tex
+++ b/sections/conclusioni.tex
@@ -1,2 +1,10 @@
 \chapter{Conclusioni}
 \label{conclusioni}
+
+1. Creato un classificatore in grado di discriminare tra domini reali e domini generati algoritmicamente tramite l'ingegnerizzazione di features linguistiche.
+
+2. Creato un classificatore neurale in grado di eseguire la medesima discriminazione senza l'ausilio di features ingegnerizzate a partire unicamente da domini mappati numericamente e che dimostra la stessa performance sui medesimi casi.
+
+3. Creato una GAN proveniente da un Autoencoder in grado di generare domini sintetici in grado di mettere in crisi la performance del classificatore neurale.
+
+4. Allenato tale classificatore con i domini provenienti dalla GAN ed ottenuto robustezza riguardo tale caso, senza perdere performance per i casi precedenti.
