--- a/sections/references.bib
+++ b/sections/references.bib
@@ -37,6 +37,25 @@ doi="10.1023/A:1013689704352",
 url="https://doi.org/10.1023/A:1013689704352"
 }
 
+@inproceedings{p2pbots,
+ author = {Narang, Pratik and Reddy, Jagan Mohan and Hota, Chittaranjan},
+ title = {Feature Selection for Detection of Peer-to-peer Botnet Traffic},
+ booktitle = {Proceedings of the 6th ACM India Computing Convention},
+ series = {Compute '13},
+ year = {2013},
+ isbn = {978-1-4503-2545-5},
+ location = {Vellore, Tamil Nadu, India},
+ pages = {16:1--16:9},
+ articleno = {16},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/2522548.2523133},
+ doi = {10.1145/2522548.2523133},
+ acmid = {2523133},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {botnet, classification, feature selection, machine learning, peer-to-peer}
+} 
+
 @Article{paclearning,
 author = "Nader H. Bshouty and Nadav Eiron and Eyal Kushilevitz",
 title = "{PAC} Learning with Nasty Noise",
@@ -45,7 +64,7 @@ volume = "288",
 number = "2",
 year = "2002",
 pages = "255--275",
-note = "Special issue for ALT '99", 
+note = "Special issue for ALT '99",
 }
 
 @inproceedings{fogla,
